--- a/machine learning/training_tree_classifier.ipynb
+++ b/machine learning/training_tree_classifier.ipynb
@@ -11,7 +11,8 @@
       "display_name": "Python 3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.6.5-final"
     }
   },
   "cells": [
@@ -38,254 +39,21 @@
       },
       "source": [
         "import pandas as pd\n",
-        "url = \"https://raw.githubusercontent.com/SalvatoreRa/tutorial/main/tree%20classifier/vertebrate.txt\"\n",
+        "url = \"https://raw.githubusercontent.com/SalvatoreRa/tutorial/main/machine%20learning/vertebrate.txt\"\n",
         "df = pd.read_csv(url, sep = \"\\t\")\n",
         "df['Class'] = df['class'].replace(['fishes','birds','amphibians','reptiles'],'non-mammals')\n",
         "df\n"
       ],
-      "execution_count": 6,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>name</th>\n",
-              "      <th>warm-blooded</th>\n",
-              "      <th>gives birth</th>\n",
-              "      <th>aquatic</th>\n",
-              "      <th>aerial</th>\n",
-              "      <th>has legs</th>\n",
-              "      <th>hibernates</th>\n",
-              "      <th>class</th>\n",
-              "      <th>Class</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>human</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>mammals</td>\n",
-              "      <td>mammals</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>python</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>reptiles</td>\n",
-              "      <td>non-mammals</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>salmon</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>fishes</td>\n",
-              "      <td>non-mammals</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>whale</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>mammals</td>\n",
-              "      <td>mammals</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>frog</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>amphibians</td>\n",
-              "      <td>non-mammals</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>komodo</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>reptiles</td>\n",
-              "      <td>non-mammals</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>bat</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>mammals</td>\n",
-              "      <td>mammals</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>pigeon</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>birds</td>\n",
-              "      <td>non-mammals</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>8</th>\n",
-              "      <td>cat</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>mammals</td>\n",
-              "      <td>mammals</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>9</th>\n",
-              "      <td>leopard shark</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>fishes</td>\n",
-              "      <td>non-mammals</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>10</th>\n",
-              "      <td>turtle</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>reptiles</td>\n",
-              "      <td>non-mammals</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>11</th>\n",
-              "      <td>penguin</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>birds</td>\n",
-              "      <td>non-mammals</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>12</th>\n",
-              "      <td>porcupine</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>mammals</td>\n",
-              "      <td>mammals</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>13</th>\n",
-              "      <td>eel</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>fishes</td>\n",
-              "      <td>non-mammals</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>14</th>\n",
-              "      <td>salamander</td>\n",
-              "      <td>0</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>amphibians</td>\n",
-              "      <td>non-mammals</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "             name  warm-blooded  ...       class        Class\n",
-              "0           human             1  ...     mammals      mammals\n",
-              "1          python             0  ...    reptiles  non-mammals\n",
-              "2          salmon             0  ...      fishes  non-mammals\n",
-              "3           whale             1  ...     mammals      mammals\n",
-              "4            frog             0  ...  amphibians  non-mammals\n",
-              "5          komodo             0  ...    reptiles  non-mammals\n",
-              "6             bat             1  ...     mammals      mammals\n",
-              "7          pigeon             1  ...       birds  non-mammals\n",
-              "8             cat             1  ...     mammals      mammals\n",
-              "9   leopard shark             0  ...      fishes  non-mammals\n",
-              "10         turtle             0  ...    reptiles  non-mammals\n",
-              "11        penguin             1  ...       birds  non-mammals\n",
-              "12      porcupine             1  ...     mammals      mammals\n",
-              "13            eel             0  ...      fishes  non-mammals\n",
-              "14     salamander             0  ...  amphibians  non-mammals\n",
-              "\n",
-              "[15 rows x 9 columns]"
-            ]
+            "text/plain": "             name  warm-blooded  gives birth  aquatic  aerial  has legs  \\\n0           human             1            1        0       0         1   \n1          python             0            0        0       0         0   \n2          salmon             0            0        1       0         0   \n3           whale             1            1        1       0         0   \n4            frog             0            0        1       0         1   \n5          komodo             0            0        0       0         1   \n6             bat             1            1        0       1         1   \n7          pigeon             1            0        0       1         1   \n8             cat             1            1        0       0         1   \n9   leopard shark             0            1        1       0         0   \n10         turtle             0            0        1       0         1   \n11        penguin             1            0        1       0         1   \n12      porcupine             1            1        0       0         1   \n13            eel             0            0        1       0         0   \n14     salamander             0            0        1       0         1   \n\n    hibernates       class        Class  \n0            1     mammals      mammals  \n1            0    reptiles  non-mammals  \n2            0      fishes  non-mammals  \n3            0     mammals      mammals  \n4            1  amphibians  non-mammals  \n5            0    reptiles  non-mammals  \n6            1     mammals      mammals  \n7            0       birds  non-mammals  \n8            0     mammals      mammals  \n9            0      fishes  non-mammals  \n10           0    reptiles  non-mammals  \n11           0       birds  non-mammals  \n12           1     mammals      mammals  \n13           0      fishes  non-mammals  \n14           1  amphibians  non-mammals  ",
+            "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>warm-blooded</th>\n      <th>gives birth</th>\n      <th>aquatic</th>\n      <th>aerial</th>\n      <th>has legs</th>\n      <th>hibernates</th>\n      <th>class</th>\n      <th>Class</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>human</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>mammals</td>\n      <td>mammals</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>python</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>reptiles</td>\n      <td>non-mammals</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>salmon</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>fishes</td>\n      <td>non-mammals</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>whale</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>mammals</td>\n      <td>mammals</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>frog</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>amphibians</td>\n      <td>non-mammals</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>komodo</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>reptiles</td>\n      <td>non-mammals</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>bat</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n      <td>mammals</td>\n      <td>mammals</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>pigeon</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>birds</td>\n      <td>non-mammals</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>cat</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>mammals</td>\n      <td>mammals</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>leopard shark</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>fishes</td>\n      <td>non-mammals</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>turtle</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>reptiles</td>\n      <td>non-mammals</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>penguin</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>birds</td>\n      <td>non-mammals</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>porcupine</td>\n      <td>1</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>mammals</td>\n      <td>mammals</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>eel</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>fishes</td>\n      <td>non-mammals</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>salamander</td>\n      <td>0</td>\n      <td>0</td>\n      <td>1</td>\n      <td>0</td>\n      <td>1</td>\n      <td>1</td>\n      <td>amphibians</td>\n      <td>non-mammals</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 1
         }
       ]
     },
