--- a/machine learning/Least_squares_regression.ipynb
+++ b/machine learning/Least_squares_regression.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "Least squares regression.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -19,6 +20,8 @@
       "cell_type": "markdown",
       "source": [
         "# Least squares regression\n",
+        "![linear regression](https://images.unsplash.com/photo-1539651044670-315229da9d2f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80)\n",
+        "photo by [Edan Cohen](https://unsplash.com/@edanco) at [Unsplash](https://unsplash.com/)\n",
         "\n",
         "## Introduction\n",
         "\n",
@@ -41,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "wtmUpLpxWpwn"
       },
@@ -87,7 +90,7 @@
         "id": "k14E2cEUFSeL",
         "outputId": "5e5efc75-f9f9-4e22-8fee-932b19cbcaa6"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -120,7 +123,7 @@
         "id": "iIEEmy0eJKSC",
         "outputId": "d7a0923e-a9c9-49ad-8b73-fcd1d82eca90"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -209,12 +212,12 @@
         "  _w = np.array(w)\n",
         "  y =  _w.dot(X) #we generate a y\n",
         "  y = np.random.normal(y,noise) #we add some noise\n",
-        "  return X, y\n"
+        "  return X, y \n"
       ],
       "metadata": {
         "id": "uLZhl-uxXGSz"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -236,7 +239,7 @@
       "metadata": {
         "id": "Up_Pxf-gLv5p"
       },
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -250,7 +253,7 @@
       "metadata": {
         "id": "Y8ALOLzoYZ7f"
       },
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -267,7 +270,7 @@
         "id": "WR5wVIKlYu_Z",
         "outputId": "8b115783-7a0a-42d6-e135-a3dead8a74b1"
       },
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -294,7 +297,7 @@
         "id": "kiG3wCshY7Fx",
         "outputId": "2918b109-2b05-451a-cae0-dbe3c6a23922"
       },
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -328,7 +331,7 @@
         "id": "3VpMsweYN-0U",
         "outputId": "09db340b-4e1f-4d1a-a907-0b5a06fd2336"
       },
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -404,7 +407,7 @@
       "metadata": {
         "id": "bxqtK8xnPINH"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -423,7 +426,7 @@
         "id": "fnmikzG5PoLv",
         "outputId": "a74eb52e-9e05-4b1c-8cd5-bf992efc6830"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -725,7 +728,7 @@
       "metadata": {
         "id": "50F5MF01PqU3"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -751,7 +754,7 @@
         "id": "G6z8VEShe5os",
         "outputId": "c8fe09f7-9846-49a5-8b56-a5b3eac0a55a"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -822,7 +825,7 @@
         "id": "E8KScVc3iNQ4",
         "outputId": "f1f0120a-2dbd-46ba-cb09-f4a94d8356ee"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -858,7 +861,7 @@
         "id": "ScYQrtyEiY7y",
         "outputId": "8ce211da-669e-41e6-b118-8db5e7e4f770"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
