--- a/artificial intelligence/activation_function.ipynb
+++ b/artificial intelligence/activation_function.ipynb
@@ -1124,7 +1124,95 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "#Implementation in NumPy\n",
+        "def linear(x, a =2):\n",
+        "    return a*x\n",
+        "\n",
+        "def linear_dash(x, a =2):\n",
+        "    f = np.linspace(1, 1, len(x)) \n",
+        "    return f* a\n",
+        "\n",
+        "def binary_step(x, a =2):\n",
+        "  return np.where(x<=0,0,1)\n",
+        "\n",
+        "def binary_step_dash( a=0):\n",
+        "    return np.where(x<=0,0,0)\n",
+        "\n",
+        "def sigmoid(x):\n",
+        "  return 1/(1+np.exp(-x))\n",
+        "\n",
+        "def sigmoid_dash(x):\n",
+        "    return sigmoid(x)*(1-sigmoid(x))\n",
+        "\n",
+        "def tanh(x):\n",
+        "  return (np.exp(x)-np.exp(-x))/(np.exp(x)+np.exp(-x))\n",
+        "\n",
+        "def tanh_dash(x):\n",
+        "    return 1-(tanh(x))**2\n",
+        "\n",
+        "def softsign(x):\n",
+        "  return x/(1+np.abs(x))\n",
+        "\n",
+        "def softsign_dash(x):\n",
+        "    return 1/(1+np.abs(x))**2\n",
+        "\n",
+        "def softplus(x):\n",
+        "  return np.log(1 + np.exp(x))\n",
+        "\n",
+        "def softplus_dash(x):\n",
+        "    return 1/(1 + np.exp(-x))\n",
+        "\n",
+        "def ReLU(x):\n",
+        "  return np.where(x <= 0, 0, x)\n",
+        "\n",
+        "def ReLU_dash(x):\n",
+        "    return np.where(x <= 0, 0, 1)\n",
+        "\n",
+        "def ReLU6(x):\n",
+        "  return np.where(x <= 0, 0, np.where(x <= 6, x, 6))\n",
+        "\n",
+        "def ReLU6_dash(x):\n",
+        "    return np.where(x <= 0, 0, 1)\n",
+        "\n",
+        "def leaky_ReLU(x, alpha =0.1):\n",
+        "  return np.where(x <= 0, alpha*x, x)\n",
+        "\n",
+        "def leaky_ReLU_dash(x, alpha =0.1):\n",
+        "    return np.where(x <= 0, alpha, 1)\n",
+        "\n",
+        "def ELU(x, alpha =1):\n",
+        "  return np.where(x <= 0, alpha*(np.exp(x) - 1), x)\n",
+        "\n",
+        "def ELU_dash(x, alpha =1):\n",
+        "    return np.where(x <= 0, alpha* np.exp(x), 1)\n",
+        "\n",
+        "def SELU(x, alpha =1.6732, lambda_scale=1.0507):\n",
+        "  return np.where(x <= 0, lambda_scale*alpha*(np.exp(x) - 1), lambda_scale * x)\n",
+        "\n",
+        "def SELU_dash(x, alpha =1.6732, lambda_scale=1.0507):\n",
+        "    return np.where(x <= 0, lambda_scale*alpha* np.exp(x), lambda_scale)\n",
+        "\n",
+        "def GELU(x):\n",
+        "    \"using the approximation with the tanh\"\n",
+        "    return 0.5 * x * (1 + tanh(np.sqrt(2 / np.pi) * (x + 0.044715 * x**3)))\n",
+        "\n",
+        "def GELU_dash(x, alpha =1.6732, lambda_scale=1.0507):\n",
+        "    return 0.5*tanh(0.0356774*x**3 + 0.797885*x)+ 0.5 + (0.0535161*x**3  + 0.398942*x)*np.cosh(0.0356774*x**3 + 0.797885*x)**-2\n",
+        "\n",
+        "def ISRLU(x, alpha =1):\n",
+        "  return np.where(x <= 0, x*(1/np.sqrt(1+alpha*x**2)),  x)\n",
+        "\n",
+        "def ISRLU_dash(x, alpha =1):\n",
+        "    return np.where(x <= 0, (1/np.sqrt(1+alpha*x**2))**3, 1)\n",
+        "\n",
+        "def swish(x):\n",
+        "  return x * sigmoid(x)\n",
+        "\n",
+        "def swish_dash(x):\n",
+        "    return swish(x)+((sigmoid(x))*(1-swish(x)))\n",
+        "\n",
+        "def softmax(x):                                \n",
+        "    return np.exp(x) / np.sum(np.exp(x))"
       ],
       "metadata": {
         "id": "bZB6jD2AgRYI"
