--- a/artificial intelligence/OpenAI_ChatGPT_test.ipynb
+++ b/artificial intelligence/OpenAI_ChatGPT_test.ipynb
@@ -21,7 +21,7 @@
         "\n",
         "ChatGPT is a recently released chatbot. ChatGPT has impressed the community with its capabilities; in my recent article I tested its capabilities. In this notebook is the corresponding code\n",
         "\n",
-        "[Medium article]()"
+        "[Medium article](https://medium.com/mlearning-ai/can-an-ai-be-a-data-scientist-2d4d9b6c5d5)"
       ],
       "metadata": {
         "id": "43IUQ6DLMbRf"
